mouse: Enable edge scrolling if two-finger scroll is unavailaible

https://bugzilla.gnome.org/show_bug.cgi?id=702858